--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartAttendance">
+
+        <activity android:name=".StudentAttendanceActivity"
+            android:exported="false"/>
         <activity
             android:name=".ProfessorSettingsActivity"
             android:exported="false" />
