--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     defaultConfig {
         applicationId "com.vasana.smartattendance"
         minSdk 21
@@ -56,8 +60,6 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
-
-
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
 }
