--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.vasana.smartattendance">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartAttendance">
-
-        <activity android:name=".StudentAttendanceActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".StudentAttendanceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudentScanBarcodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudentClassList"
+            android:exported="false" />
         <activity
             android:name=".ProfessorSettingsActivity"
             android:exported="false" />
