--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 android {
     compileSdk 32
+
     buildFeatures {
         viewBinding = true
     }
@@ -56,9 +57,23 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //timber logger
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+
+    implementation 'com.github.harrisonsj:KProgressHUD:1.1'
+
+    implementation 'com.github.delight-im:Android-AdvancedWebView:v3.2.1'
+
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
+    implementation 'com.google.zxing:core:3.3.2'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
-    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
 
 }
